// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header matches the last snapshot 1`] = `
<div
  data-styleName="header"
  id="thread-header"
>
  <div
    data-styleName="header-text"
  >
    Jo and La
  </div>
  <CloseMessages />
</div>
`;

exports[`Header matches the last snapshot when just 2 participants 1`] = `
<div
  data-styleName="header"
  id="thread-header"
>
  <div
    data-styleName="header-text"
  >
    Jo
  </div>
  <CloseMessages />
</div>
`;

exports[`Header matches the last snapshot when just you 1`] = `
<div
  data-styleName="header"
  id="thread-header"
>
  <div
    data-styleName="header-text"
  >
    You
  </div>
  <CloseMessages />
</div>
`;

exports[`Thread matches the last snapshot 1`] = `
<div
  data-styleName="thread"
>
  <Header
    thread={
      Object {
        "id": "1",
      }
    }
  />
  <Connect(MessageSection)
    messageThreadId="1"
    thread={
      Object {
        "id": "1",
      }
    }
  />
  <div
    data-styleName="message-form"
  >
    <Connect(MessageForm)
      focusForm={[Function]}
      formRef={[Function]}
      messageThreadId="1"
    />
  </div>
  <Connect(PeopleTyping)
    data-styleName="people-typing"
  />
  <Connect(SocketSubscriber)
    id="1"
    type="post"
  />
</div>
`;
